--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,3 +1,2 @@
-<strong>Add a New Item for <%= @restaurant.name %> </strong>
-<br/><br/>
+<h2>Add a New Item for <%= @restaurant.name %> </h2>
 <%= render 'form', restaurant: @restaurant, item: @item %>
