--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -5,9 +5,9 @@
     <small><%= time_ago_in_words(category.created_at)%> ago</small>
   </div>
   <div class='card-inner-links-container'>
-    <p class='mb-1 badge badge-primary'><%= pluralize(category.items.length, 'Item')%></p>
+    <p class='mb-1 badge badge-primary'><%= pluralize(category.items.size, 'Item')%></p>
     <div class='d-block'>
-      <% if policy(category).edit? && policy(category).destroy? %>
+      <% if can_modify_category?(category) %>
         <%= link_to 'Edit',
                     edit_category_path(category),
                     class: 'btn btn-outline-dark card-inner-link' %>
