--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,9 @@
     <title>DinnerDash</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset='UTF-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -24,7 +24,7 @@
           <%= link_to 'Restaurants', restaurants_path, class: 'nav-item nav-link' %>
           <%= link_to 'Categories', categories_path, class: 'nav-item nav-link' %>
           <% unless current_user&.admin?%>
-            <%= link_to 'Popular Items', items_path, class: 'nav-item nav-link' %>
+            <%= link_to 'Items', items_path, class: 'nav-item nav-link' %>
             <%= link_to cart_path, class: 'nav-item nav-link' do %>
               View Cart <span id='cart-items-count' class='badge badge-light'><%= user_signed_in? ? @current_cart.line_items.length : @current_cart[:cart_items].length %></span>
             <% end %>
@@ -42,7 +42,7 @@
     <div id='flash_messages'>
       <%= render 'shared/flashes' %>
     </div>
-    <div class="container" id='main'>
+    <div class='container' id='main'>
       <%= yield %>
     </div>
   </body>
