--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -6,5 +6,5 @@
 <% end %>
 <% if cart&.line_items&.any? %>
   <%= link_to 'Empty Cart', cart, method: :delete, class: 'btn btn-danger' %>
-  <%= link_to 'Check Out', :checkout_orders, method: :post, class: 'btn btn-warning' %>
+  <%= link_to 'Check Out', [Order.new], method: :post, class: 'btn btn-warning' %>
 <% end %>
