--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,38 +7,12 @@
     <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <nav class='navbar navbar-expand-lg navbar-dark bg-primary'>
-      <a class='navbar-brand' href='#'>Dinner Dash</a>
-      <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbarNavAltMarkup' aria-controls='navbarNavAltMarkup' aria-expanded='false' aria-label='Toggle navigation'>
-        <span class='navbar-toggler-icon'></span>
-      </button>
-      <div class='collapse navbar-collapse' id='navbarNavAltMarkup'>
-        <div class='navbar-nav'>
-          <%= link_to 'Restaurants', restaurants_path, class: 'nav-item nav-link' %>
-          <%= link_to 'Categories', categories_path, class: 'nav-item nav-link' %>
-          <% unless current_user&.admin?%>
-            <%= link_to 'Items', items_path, class: 'nav-item nav-link' %>
-            <%= link_to cart_path, class: 'nav-item nav-link' do %>
-              View Cart <span id='cart-items-count' class='badge badge-light'><%= user_signed_in? ? @current_cart.line_items.length : @current_cart[:cart_items].length %></span>
-            <% end %>
-          <% end %>
-          <% if user_signed_in? %>
-            <%= link_to 'Orders', :orders, class: 'nav-item nav-link' %>
-            <%= link_to 'Sign Out', destroy_user_session_path, class: 'nav-item nav-link', method: :delete %>
-            <%= link_to 'Edit Profile', edit_user_registration_path, class: 'nav-item nav-link' %>
-          <% else %>
-            <%= link_to 'Sign In', new_user_session_path, class: 'nav-item nav-link' %>
-          <% end %>
-        </div>
-      </div>
-    </nav>
+    <%= render 'shared/navigation_bar' %>
     <div id='flash_messages'>
       <%= render 'shared/flashes' %>
     </div>
